@@ -5,6 +5,7 @@ Cacti CHANGELOG
 -bug: Setting a host template filter in devices, followed by moving off and then back on the page generated an error.
 -bug: PHP 5.1 snmpwalks utilize the bulk method by default.  Therefore, prefer them over the bulkwalk binary.
 -bug: Allow read_config_option to force a database refresh when one is wanted.
+-bug: Fix issue with the script server where a function called where a data query without the <extra_args> does not work.
 
 0.8.6h
 -bug#0000383: Add more verbose RRDtool debug output from Graph Management.
